# huber

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/huber/: config-generator.conf
huber/: __init__.py  version.py
huber/cmd/: notification.py
huber/common/: clients.py  config.py  exceptions.py  keystone.py  service.py
huber/handlers/: base.py  common.py  dispatcher.py  logging_handler.py  password.py  project_membership.py
huber/notification/: consumer.py  endpoints.py  event.py
huber/templates/password/: changed.html
huber/templates/project_membership/: added.html  removed.html
huber/tests/etc/: huber.conf
huber/tests/unit/: base.py
huber/tests/unit/handlers/: test_base.py  test_common.py  test_dispatcher.py  test_logging_handler.py  test_password.py  test_project_membership.py
huber/tests/unit/notification/: test_endpoints.py  test_event.py
releasenotes/notes/: setup-reno-86a23dccf6f66794.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
