[metadata]
name = huber
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Nectar notification-driven action runner
description_file =
    README.md
description_content_type = text/markdown
keywords = huber
home_page = https://github.com/NeCTAR-RC/huber
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = huber
include_package_data = True

[entry_points]
console_scripts =
    huber-notification = huber.cmd.notification:main

huber.handler =
    logging = huber.handlers.logging_handler:LoggingHandler
    project_membership = huber.handlers.project_membership:ProjectMembershipHandler

oslo.config.opts =
    huber = huber.common.config:list_opts

[pbr]
skip_changelog=true
skip_authors=true
